@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.566 2004-05-06 15:35:30 castaglia Exp $
+$Id: NEWS,v 1.567 2004-05-07 21:31:29 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -17,6 +17,7 @@ CVS
 - Bug 2403 - Sending SIGHUP to proftpd stops it when using Classes.  The fix
   for Bug #2400 could result in an infinite loop during a SIGHUP.
 - Bug 2405 - "LIST *" should not list dotfiles.
+- Bug 2366 - Add support for -h list option.
 
 1.2.10rc1 - Released 28-Apr-2004
 ---------------------------------
